--- a/root/src/microfrontend-layout.html
+++ b/root/src/microfrontend-layout.html
@@ -18,7 +18,8 @@
   -->
 
   <main>
-    <route default>
+    <application name="@codenapp/app-03"></application>
+    <route path="app01">
       <application name="@codenapp/app-01"></application>
     </route>
     <route path="app02">
