--- a/root/src/microfrontend-layout.html
+++ b/root/src/microfrontend-layout.html
@@ -1,30 +1,16 @@
 <single-spa-router>
-  <!--
-
-    This is the single-spa Layout Definition for your microfrontends.
-    See https://single-spa.js.org/docs/layout-definition/ for more information.
-
-  -->
-
-  <!-- Example layouts you might find helpful:
-
-  <nav>
-    <application name="@org/navbar"></application>
-  </nav>
-  <route path="settings">
-    <application name="@org/settings"></application>
-  </route>
-
-  -->
-
   <main>
-    <application name="@codenapp/app-03"></application>
     <route path="app01">
       <application name="@codenapp/app-01"></application>
     </route>
     <route path="app02">
       <application name="@codenapp/app-02"></application>
     </route>
+    <route path="all">
+      <application name="@codenapp/app-02"></application>
+      <application name="@codenapp/app-01"></application>
+    </route>
+    <application name="@codenapp/app-03"></application>
 
   </main>
 </single-spa-router>
